@startuml
class User {
    - id: Long
    - name: String
    - email: String
    - password: String
    + register(): void
    + login(): boolean
}

class Task {
    - id: Long
    - title: String
    - description: String
    - dueDate: LocalDate
    - priority: String  // "High", "Medium", "Low"
    - status: String    // "To-Do", "In-Progress", "Completed"
    + createTask(): void
    + editTask(): void
    + deleteTask(): void
}

class TaskManager {
    + assignTask(task: Task, user: User): void
    + getTasksByPriority(priority: String): List<Task>
}

User "1" -- "0..*" Task
TaskManager "1" -- "0..*" Task
@enduml
